--- a/infrastructure/kube/keep-dev/kube-setup.org
+++ b/infrastructure/kube/keep-dev/kube-setup.org
@@ -453,8 +453,8 @@ keep-client-config.toml:
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconFrontend contract
   KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
-  # Hex-encoded address of KeepRandomBeaconBackend contract
-  KeepRandomBeaconBackend = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
+  # Hex-encoded address of KeepRandomBeaconOperator contract
+  KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
   Staking = "0xC3920F936b251DFE4B4b62C3b62FB530D032a090"
 
@@ -541,8 +541,8 @@ keep-client-config.toml:
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconFrontend contract
   KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
-  # Hex-encoded address of KeepRandomBeaconBackend contract
-  KeepRandomBeaconBackend = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
+  # Hex-encoded address of KeepRandomBeaconOperator contract
+  KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
   Staking = "0xC3920F936b251DFE4B4b62C3b62FB530D032a090"
 
@@ -628,8 +628,8 @@ keep-client-config.toml:
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconFrontend contract
   KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
-  # Hex-encoded address of KeepRandomBeaconBackend contract
-  KeepRandomBeaconBackend = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
+  # Hex-encoded address of KeepRandomBeaconOperator contract
+  KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
   Staking = "0xC3920F936b251DFE4B4b62C3b62FB530D032a090"
 
@@ -715,8 +715,8 @@ keep-client-config.toml:
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconFrontend contract
   KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
-  # Hex-encoded address of KeepRandomBeaconBackend contract
-  KeepRandomBeaconBackend = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
+  # Hex-encoded address of KeepRandomBeaconOperator contract
+  KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
   Staking = "0xC3920F936b251DFE4B4b62C3b62FB530D032a090"
 
@@ -801,8 +801,8 @@ keep-client-config.toml:
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconFrontend contract
   KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
-  # Hex-encoded address of KeepRandomBeaconBackend contract
-  KeepRandomBeaconBackend = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
+  # Hex-encoded address of KeepRandomBeaconOperator contract
+  KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
   Staking = "0xC3920F936b251DFE4B4b62C3b62FB530D032a090"
 
