--- a/infrastructure/kube/keep-dev/kube-setup.org
+++ b/infrastructure/kube/keep-dev/kube-setup.org
@@ -451,8 +451,8 @@ keep-client-config.toml:
   KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
-  # Hex-encoded address of KeepRandomBeaconFrontend contract
-  KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
+  # Hex-encoded address of KeepRandomBeaconService contract
+  KeepRandomBeaconService = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
@@ -539,8 +539,8 @@ keep-client-config.toml:
   KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
-  # Hex-encoded address of KeepRandomBeaconFrontend contract
-  KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
+  # Hex-encoded address of KeepRandomBeaconService contract
+  KeepRandomBeaconService = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
@@ -626,8 +626,8 @@ keep-client-config.toml:
   KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
-  # Hex-encoded address of KeepRandomBeaconFrontend contract
-  KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
+  # Hex-encoded address of KeepRandomBeaconService contract
+  KeepRandomBeaconService = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
@@ -713,8 +713,8 @@ keep-client-config.toml:
   KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
-  # Hex-encoded address of KeepRandomBeaconFrontend contract
-  KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
+  # Hex-encoded address of KeepRandomBeaconService contract
+  KeepRandomBeaconService = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
@@ -799,8 +799,8 @@ keep-client-config.toml:
   KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
-  # Hex-encoded address of KeepRandomBeaconFrontend contract
-  KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
+  # Hex-encoded address of KeepRandomBeaconService contract
+  KeepRandomBeaconService = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
