--- a/docs/rfc/rfc-12-keep-network-interface.adoc
+++ b/docs/rfc/rfc-12-keep-network-interface.adoc
@@ -9,11 +9,15 @@ toc::[]
 
 == Proposal
 
-This document specifies how applications integrate with Keep Network.
+This document specifies how applications interact with Keep Network.
 
 === Terminology
 
-a keep:: A keep is a smart contract.
+Application:: Application is an external smart contract or a set of smart  
+              contracts utilizing functionalities offered by Keep Network.
+
+a keep:: A keep is a smart contract used by an application to perform some work. 
+         It is a privacy primitive enabling secure storage and usage of secrets.
 
 sMPC cluster:: A keep can have off-chain clients executing work for a keep. 
                Off-chain clients serving a keep together form an sMPC cluster. 
@@ -29,9 +33,6 @@ KEEP:: KEEP is an ERC-20 work token used to stake in the Keep network.
 Keep Core:: Keep Core consist of a set of on-chain contracts and off-chain  
             client providing the functionality of random beacon
             and KEEP token along with all stake management interfaces.
-
-Application:: Application is an external smart contract or a set of smart  
-              contracts utilizing functionalities offered by Keep Network.
 
 tECDSA:: Threshold Elliptic Curve Digital Signature Algorithm. 
 
